--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Black Jack Probability
 
+!!! watch the Demonstration.mp4 !!!
+
 Desktop app that allows to play simple BJ game and shows some probabilities.
 
 Game rules:
