--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Black Jack Probability
 
-!!! watch the Demonstration.mp4 !!!
+!!! watch the demonstration: https://youtu.be/bt57QvHx_mI !!!
 
 Desktop app that allows to play simple BJ game and shows some probabilities.
 
